List.of is a Java 11 feature -> replace with Arrays.asList to stay java-8 compatible